# New-AI-Agent

./: .cursorrules  .env.example  .gitignore  README-python.md  README.md  demo.py  pyproject.toml  requirements.txt  simple_demo.py
.github/workflows/: MOeAIAgentCLI.yml  aiagent.yml  build-vsix.yml  lastmain.yml  main.yaml  main.yml  multi-platform-ai-integration.yml  new-ai-agent-workflow.yaml  newrun-cli.yml  nmain.yml  python-ai-agent-fixed.yml  python-ai-agent.yml  requirement.txt  run-cli.yml  run-moeaiagent.yml  vscode-marketplace-integration.yml
ai_coding_agent/: __init__.py  cli.py
ai_coding_agent/analyzers/: __init__.py  code_analyzer.py
ai_coding_agent/core/: __init__.py  agent.py  config.py  context.py  performance.py  security.py  types.py
ai_coding_agent/generators/: __init__.py  code_generator.py
ai_coding_agent/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
ai_coding_agent/tools/: __init__.py  base.py  builtin_tools.py  manager.py
tests/: __init__.py  test_agent.py  test_types.py
vscode-extension/: .vscodeignore  CHANGELOG.md  ai-coding-agent-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/core/: agent.ts  config.ts
vscode-extension/src/providers/: chatProvider.ts  historyProvider.ts  toolsProvider.ts
